changed data type

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 343,
    "id": "06a6bbd1",
    "metadata": {},
    "outputs": [
@@ -1869,13 +1869,13 @@
        "contract_type               object\n",
        "contract_time               object\n",
        "min_salary                   int64\n",
-       "max_salary                 float64\n",
+       "max_salary                   int64\n",
        "predicted_salary             int64\n",
        "date_posted         datetime64[ns]\n",
        "dtype: object"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,7 +1887,9 @@
     "#convert min_salary to integer from float and fill null value with 0\n",
     "job_data['min_salary'] = job_data['min_salary'].fillna(0).astype(int)\n",
     "\n",
-    "#convert max_salary to integer from float\n",
+    "#convert max_salary to integer from float and fill null value with minimum value\n",
+    "job_data['max_salary'] = job_data['max_salary'].fillna(job_data['min_salary']).astype(int)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
