created data foler for csv file

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,257 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 18,
    "id": "aa227c3e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#import library\n",
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 20,
    "id": "aba050c7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>company_name</th>\n",
-       "      <th>category_label</th>\n",
-       "      <th>category_tag</th>\n",
-       "      <th>country</th>\n",
-       "      <th>location_display</th>\n",
-       "      <th>location_area</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>contract_type</th>\n",
-       "      <th>contract_time</th>\n",
-       "      <th>salary_min</th>\n",
-       "      <th>salary_max</th>\n",
-       "      <th>salary_mid</th>\n",
-       "      <th>salary_is_predicted</th>\n",
-       "      <th>created_dt</th>\n",
-       "      <th>created_date</th>\n",
-       "      <th>redirect_url</th>\n",
-       "      <th>adref</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5410474609</td>\n",
-       "      <td>Mechanical Pipefitter</td>\n",
-       "      <td>Dodd Group</td>\n",
-       "      <td>Trade &amp; Construction Jobs</td>\n",
-       "      <td>trade-construction-jobs</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>King's Lynn, Norfolk</td>\n",
-       "      <td>UK &gt; Eastern England &gt; Norfolk &gt; King's Lynn</td>\n",
-       "      <td>52.751999</td>\n",
-       "      <td>0.395357</td>\n",
-       "      <td>permanent</td>\n",
-       "      <td>full_time</td>\n",
-       "      <td>40518.74</td>\n",
-       "      <td>40518.74</td>\n",
-       "      <td>40518.74</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-09-22 09:28:13+00:00</td>\n",
-       "      <td>2025-09-22</td>\n",
-       "      <td>https://www.adzuna.co.uk/jobs/details/54104746...</td>\n",
-       "      <td>eyJhbGciOiJIUzI1NiJ9.eyJpIjoiNTQxMDQ3NDYwOSIsI...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5381519011</td>\n",
-       "      <td>International Trade Policy Editor [Startup Pol...</td>\n",
-       "      <td>Applio Ventures</td>\n",
-       "      <td>Graduate Jobs</td>\n",
-       "      <td>graduate-jobs</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>London, UK</td>\n",
-       "      <td>UK &gt; London</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>permanent</td>\n",
-       "      <td>full_time</td>\n",
-       "      <td>64000.00</td>\n",
-       "      <td>64000.00</td>\n",
-       "      <td>64000.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2025-09-03 21:20:59+00:00</td>\n",
-       "      <td>2025-09-03</td>\n",
-       "      <td>https://www.adzuna.co.uk/jobs/details/53815190...</td>\n",
-       "      <td>eyJhbGciOiJIUzI1NiJ9.eyJpIjoiNTM4MTUxOTAxMSIsI...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5389371380</td>\n",
-       "      <td>Domestic Cleaner</td>\n",
-       "      <td>Maid2Clean Suffolk Ltd</td>\n",
-       "      <td>Domestic help &amp; Cleaning Jobs</td>\n",
-       "      <td>domestic-help-cleaning-jobs</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>Diss, Norfolk</td>\n",
-       "      <td>UK &gt; Eastern England &gt; Norfolk &gt; Diss</td>\n",
-       "      <td>52.377602</td>\n",
-       "      <td>1.106380</td>\n",
-       "      <td>permanent</td>\n",
-       "      <td>part_time</td>\n",
-       "      <td>13.00</td>\n",
-       "      <td>13.00</td>\n",
-       "      <td>13.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2025-09-08 15:49:25+00:00</td>\n",
-       "      <td>2025-09-08</td>\n",
-       "      <td>https://www.adzuna.co.uk/jobs/details/53893713...</td>\n",
-       "      <td>eyJhbGciOiJIUzI1NiJ9.eyJzIjoiRWtwZjc5cWI4QkdZM...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5403097985</td>\n",
-       "      <td>Early Years BABY Room Leader</td>\n",
-       "      <td>Jesters Childcare Essex</td>\n",
-       "      <td>Teaching Jobs</td>\n",
-       "      <td>teaching-jobs</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>UK</td>\n",
-       "      <td>UK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>permanent</td>\n",
-       "      <td>full_time</td>\n",
-       "      <td>26707.00</td>\n",
-       "      <td>29494.00</td>\n",
-       "      <td>28100.50</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2025-09-17 15:00:12+00:00</td>\n",
-       "      <td>2025-09-17</td>\n",
-       "      <td>https://www.adzuna.co.uk/jobs/details/54030979...</td>\n",
-       "      <td>eyJhbGciOiJIUzI1NiJ9.eyJpIjoiNTQwMzA5Nzk4NSIsI...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5400306117</td>\n",
-       "      <td>Senior Back-End Engineer</td>\n",
-       "      <td>Eligible Limited</td>\n",
-       "      <td>IT Jobs</td>\n",
-       "      <td>it-jobs</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>UK</td>\n",
-       "      <td>UK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>permanent</td>\n",
-       "      <td>full_time</td>\n",
-       "      <td>80000.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>80000.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2025-09-15 17:51:23+00:00</td>\n",
-       "      <td>2025-09-15</td>\n",
-       "      <td>https://www.adzuna.co.uk/jobs/details/54003061...</td>\n",
-       "      <td>eyJhbGciOiJIUzI1NiJ9.eyJzIjoiRWtwZjc5cWI4QkdZM...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           id                                              title  \\\n",
-       "0  5410474609                              Mechanical Pipefitter   \n",
-       "1  5381519011  International Trade Policy Editor [Startup Pol...   \n",
-       "2  5389371380                                   Domestic Cleaner   \n",
-       "3  5403097985                       Early Years BABY Room Leader   \n",
-       "4  5400306117                           Senior Back-End Engineer   \n",
-       "\n",
-       "              company_name                 category_label  \\\n",
-       "0               Dodd Group      Trade & Construction Jobs   \n",
-       "1          Applio Ventures                  Graduate Jobs   \n",
-       "2   Maid2Clean Suffolk Ltd  Domestic help & Cleaning Jobs   \n",
-       "3  Jesters Childcare Essex                  Teaching Jobs   \n",
-       "4         Eligible Limited                        IT Jobs   \n",
-       "\n",
-       "                  category_tag         country      location_display  \\\n",
-       "0      trade-construction-jobs  United Kingdom  King's Lynn, Norfolk   \n",
-       "1                graduate-jobs  United Kingdom            London, UK   \n",
-       "2  domestic-help-cleaning-jobs  United Kingdom         Diss, Norfolk   \n",
-       "3                teaching-jobs  United Kingdom                    UK   \n",
-       "4                      it-jobs  United Kingdom                    UK   \n",
-       "\n",
-       "                                  location_area   latitude  longitude  \\\n",
-       "0  UK > Eastern England > Norfolk > King's Lynn  52.751999   0.395357   \n",
-       "1                                   UK > London        NaN        NaN   \n",
-       "2         UK > Eastern England > Norfolk > Diss  52.377602   1.106380   \n",
-       "3                                            UK        NaN        NaN   \n",
-       "4                                            UK        NaN        NaN   \n",
-       "\n",
-       "  contract_type contract_time  salary_min  salary_max  salary_mid  \\\n",
-       "0     permanent     full_time    40518.74    40518.74    40518.74   \n",
-       "1     permanent     full_time    64000.00    64000.00    64000.00   \n",
-       "2     permanent     part_time       13.00       13.00       13.00   \n",
-       "3     permanent     full_time    26707.00    29494.00    28100.50   \n",
-       "4     permanent     full_time    80000.00         NaN    80000.00   \n",
-       "\n",
-       "   salary_is_predicted                 created_dt created_date  \\\n",
-       "0                    1  2025-09-22 09:28:13+00:00   2025-09-22   \n",
-       "1                    0  2025-09-03 21:20:59+00:00   2025-09-03   \n",
-       "2                    0  2025-09-08 15:49:25+00:00   2025-09-08   \n",
-       "3                    0  2025-09-17 15:00:12+00:00   2025-09-17   \n",
-       "4                    0  2025-09-15 17:51:23+00:00   2025-09-15   \n",
-       "\n",
-       "                                        redirect_url  \\\n",
-       "0  https://www.adzuna.co.uk/jobs/details/54104746...   \n",
-       "1  https://www.adzuna.co.uk/jobs/details/53815190...   \n",
-       "2  https://www.adzuna.co.uk/jobs/details/53893713...   \n",
-       "3  https://www.adzuna.co.uk/jobs/details/54030979...   \n",
-       "4  https://www.adzuna.co.uk/jobs/details/54003061...   \n",
-       "\n",
-       "                                               adref  \n",
-       "0  eyJhbGciOiJIUzI1NiJ9.eyJpIjoiNTQxMDQ3NDYwOSIsI...  \n",
-       "1  eyJhbGciOiJIUzI1NiJ9.eyJpIjoiNTM4MTUxOTAxMSIsI...  \n",
-       "2  eyJhbGciOiJIUzI1NiJ9.eyJzIjoiRWtwZjc5cWI4QkdZM...  \n",
-       "3  eyJhbGciOiJIUzI1NiJ9.eyJpIjoiNTQwMzA5Nzk4NSIsI...  \n",
-       "4  eyJhbGciOiJIUzI1NiJ9.eyJzIjoiRWtwZjc5cWI4QkdZM...  "
-      ]
-     },
-     "execution_count": 315,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1859834367.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mjob_data = pd.read_csv(../data/\"dfall_clean.csv\")\u001b[39m\n                           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "#read csv file\n",
-    "job_data = pd.read_csv(\"dfall_clean.csv\")\n",
+    "job_data = pd.read_csv(../data/\"dfall_clean.csv\")\n",
     "job_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": null,
    "id": "97f1b8e6",
    "metadata": {},
    "outputs": [
@@ -267,7 +52,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": null,
    "id": "03f6d0ba",
    "metadata": {},
    "outputs": [
@@ -289,7 +74,7 @@
        "(4000, 20)"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": null,
    "id": "850ae926",
    "metadata": {},
    "outputs": [
@@ -442,7 +227,7 @@
        "max    3.500000e+06             1.000000  "
       ]
      },
-     "execution_count": 318,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": null,
    "id": "775ba378",
    "metadata": {},
    "outputs": [
@@ -498,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": null,
    "id": "d128e63c",
    "metadata": {},
    "outputs": [
@@ -659,7 +444,7 @@
        "4    80000.00         NaN                    0   2025-09-15  "
       ]
      },
-     "execution_count": 320,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": null,
    "id": "329b1f31",
    "metadata": {},
    "outputs": [
@@ -700,7 +485,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": null,
    "id": "17910607",
    "metadata": {},
    "outputs": [
@@ -736,7 +521,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": null,
    "id": "56f6aad3",
    "metadata": {},
    "outputs": [
@@ -909,7 +694,7 @@
        "4    80000.00         NaN                 0  2025-09-15  "
       ]
      },
-     "execution_count": 323,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": null,
    "id": "423d10c0",
    "metadata": {},
    "outputs": [
@@ -1092,7 +877,7 @@
        "4    80000.00         NaN                 0  2025-09-15  "
       ]
      },
-     "execution_count": 324,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": null,
    "id": "b846cacd",
    "metadata": {},
    "outputs": [
@@ -1779,7 +1564,7 @@
        "3403           NaN         NaN         NaN                 0  2025-09-01  "
       ]
      },
-     "execution_count": 325,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1792,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": null,
    "id": "88a6da47",
    "metadata": {},
    "outputs": [
@@ -1802,7 +1587,7 @@
        "(3986, 14)"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1815,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": null,
    "id": "154ec58c",
    "metadata": {},
    "outputs": [
@@ -1839,7 +1624,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1851,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": null,
    "id": "06a6bbd1",
    "metadata": {},
    "outputs": [
@@ -1875,7 +1660,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1896,6 +1681,14 @@
     "\n",
     "job_data.dtypes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53f28140",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
